add max durartion

--- a/Tugas-React/backend-tugas-reactjs/vercel.json
+++ b/Tugas-React/backend-tugas-reactjs/vercel.json
@@ -1,12 +1,16 @@
 {
-    "github": {
-      "silent": true
-    },
-    "rewrites": [
-      {
-        "source": "/(.*)",
-        "destination": "/api/vercel.go"
-      }
-    ]
+  "github": {
+    "silent": true
+  },
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api/vercel.go"
+    }
+  ],
+  "functions": {
+    "api/vercel.go": {
+      "maxDuration": 100
+    }
+  }
 }
-  
