--- a/Tugas-React/fp-super-bootcamp-react/package.json
+++ b/Tugas-React/fp-super-bootcamp-react/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project-reactjs",
+  "name": "fp-super-bootcamp-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
+    "cors": "^2.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
