--- a/Tugas-NextJS/tugas-next-js/package.json
+++ b/Tugas-NextJS/tugas-next-js/package.json
@@ -13,7 +13,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "sweetalert2": "^11.12.3"
+    "sweetalert2": "^11.12.3",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "postcss": "^8",
