--- a/Tugas-NextJS/tugas-next-js/.env
+++ b/Tugas-NextJS/tugas-next-js/.env
@@ -1,3 +1,3 @@
-# API_URL=https://backend-tugas-reactjs-mocha.vercel.app
-API_URL=http://localhost:8080
+API_URL=https://backend-tugas-reactjs-mocha.vercel.app
+# API_URL=http://localhost:8080
 NEXT_PUBLIC_API_URL=http://localhost:8080
